omni/tests/goldens/types/unknown_type_17.err
tests/goldens/types/unknown_type_17.omni:1:13: error: unknown type "Mystery17"
  let value17:Mystery17 = 1
              ~~~~~~~~~ hint: import or declare the type before use
tests/goldens/types/unknown_type_17.omni:1:1: error: cannot assign int to Mystery17
  let value17:Mystery17 = 1
  ~~~~~~~~~~~~~~~~~~~~~~~~~ hint: convert the expression to Mystery17 or change the variable type to int
